# src/modules/stages/StagesController.ts
@@ -17,45 +17,45 @@ export default class StagesController {
     this.stagesService = stagesService;
   }
 
-  async createRequest(req: Request, res: Response): Promise<void> {
-    const block = `${this.block}.createRequest`;
-    try {
-      const user = req.user;
-      const pipelineId = req.params.pipelineId;
-      this.httpService.requestValidation.validateUuid(pipelineId, "pipelineId", block);
+  // async createRequest(req: Request, res: Response): Promise<void> {
+  //   const block = `${this.block}.createRequest`;
+  //   try {
+  //     const user = req.user;
+  //     const pipelineId = req.params.pipelineId;
+  //     this.httpService.requestValidation.validateUuid(pipelineId, "pipelineId", block);
 
       
-      const pipelineResource = await this.httpService.requestValidation.validateResource<PipelineData>(pipelineId, "PipelinesService", "Pipeline not found", block)
+  //     const pipelineResource = await this.httpService.requestValidation.validateResource<PipelineData>(pipelineId, "PipelinesService", "Pipeline not found", block)
 
-      this.httpService.requestValidation.validateActionAuthorization(user.user_id, pipelineResource.userId, block);
+  //     this.httpService.requestValidation.validateActionAuthorization(user.user_id, pipelineResource.userId, block);
       
-      const requiredFields = ["stages"];
-      this.httpService.requestValidation.validateRequestBody(requiredFields, req.body, block);
+  //     const requiredFields = ["stages"];
+  //     this.httpService.requestValidation.validateRequestBody(requiredFields, req.body, block);
 
-      const { stages } = req.body;
+  //     const { stages } = req.body;
 
-      if(!Array.isArray(stages)) {
-        throw new BadRequestError("Invalid data format", {
-          block: block,
-          detail: "Property 'Stages' must be of type array",
-          typeInReq: typeof stages
-        })
-      }
+  //     if(!Array.isArray(stages)) {
+  //       throw new BadRequestError("Invalid data format", {
+  //         block: block,
+  //         detail: "Property 'Stages' must be of type array",
+  //         typeInReq: typeof stages
+  //       })
+  //     }
 
-      const mappedStages = stages.map((stage) => {
-        return {
-          ...stage,
-          pipelineId: pipelineId
-        }
-      })
+  //     const mappedStages = stages.map((stage) => {
+  //       return {
+  //         ...stage,
+  //         pipelineId: pipelineId
+  //       }
+  //     })
 
-      await this.stagesService.createMany(mappedStages);
+  //     await this.stagesService.createMany(mappedStages);
 
-      res.status(200).json({ message: "stages added." });
-    } catch (error) {
-      throw error;
-    }
-  }
+  //     res.status(200).json({ message: "stages added." });
+  //   } catch (error) {
+  //     throw error;
+  //   }
+  // }
 
   // async resourceRequest(req: Request, res: Response): Promise<void> {
   //   const block = `${this.block}.resourceRequest`;
@@ -85,29 +85,29 @@ export default class StagesController {
     }
   }
 
-  async updateRequest(req: Request, res: Response): Promise<void> {
-    const block = `${this.block}.updateRequest`;
-    try { 
-      const user = req.user;
-      const stageId = req.params.stageId;
-      this.httpService.requestValidation.validateUuid(stageId, "stageId", block);
+  // async updateRequest(req: Request, res: Response): Promise<void> {
+  //   const block = `${this.block}.updateRequest`;
+  //   try { 
+  //     const user = req.user;
+  //     const stageId = req.params.stageId;
+  //     this.httpService.requestValidation.validateUuid(stageId, "stageId", block);
 
-      const stageResource = await this.httpService.requestValidation.validateResource<StageData>(stageId, "StagesService", "Stage not found", block);
+  //     const stageResource = await this.httpService.requestValidation.validateResource<StageData>(stageId, "StagesService", "Stage not found", block);
       
-      const pipelineResource = await this.httpService.requestValidation.validateResource<PipelineData>(stageResource.pipelineId, "PipelinesService", "Pipeline not found", block);
-      this.httpService.requestValidation.validateActionAuthorization(user.user_id, pipelineResource.userId, block);
+  //     const pipelineResource = await this.httpService.requestValidation.validateResource<PipelineData>(stageResource.pipelineId, "PipelinesService", "Pipeline not found", block);
+  //     this.httpService.requestValidation.validateActionAuthorization(user.user_id, pipelineResource.userId, block);
 
-      const allowedChanges = ["name"];
+  //     const allowedChanges = ["name"];
 
-      const filteredChanges = this.httpService.requestValidation.filterUpdateRequest<StageData>(allowedChanges, req.body, block);
+  //     const filteredChanges = this.httpService.requestValidation.filterUpdateRequest<StageData>(allowedChanges, req.body, block);
 
-      await this.stagesService.update(stageId, filteredChanges);
+  //     await this.stagesService.update(stageId, filteredChanges);
 
-      res.status(200).json({ message: "Stage updated" });
-    } catch (error) {
-      throw error;
-    }
-  }
+  //     res.status(200).json({ message: "Stage updated" });
+  //   } catch (error) {
+  //     throw error;
+  //   }
+  // }
 
   async deleteRequest(req: Request, res: Response): Promise<void> {
     const block = `${this.block}.deleteRequest`;
